# photometry-workflow

./: .gitignore  CLAUDE.md  README.md  TODO.md  environment.yaml  pyproject.toml
docs/: interface.md  project-structure.md
notebooks/: README.md  apparent_magnitude.ipynb  integrated_apparent_mag.ipynb
src/photometry_workflow/alignment/: api.py  cli.py
src/photometry_workflow/aperture_photometry/: CLAUDE.md  api.py  cli.py
src/photometry_workflow/apparent_magnitude/: CLAUDE.md  api.py  cli.py
src/photometry_workflow/common/: aavso.py  cross_match.py  error.py  io.py
src/photometry_workflow/comparison_stars/: api.py  cli.py
src/photometry_workflow/differential_photometry/: api.py  cli.py
src/photometry_workflow/screening/: api.py  cli.py
src/photometry_workflow/stack/: api.py  cli.py
tests/: test_alignment.py  test_aperture_photometry.py  test_apparent_magnitude.py  test_common_io.py  test_comparison_stars.py  test_differential_photometry.py  test_screening.py  test_sources.py  test_stack.py
