[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "photometry-workflow"
version = "0.1.0"
description = "CLI toolset and Python API for photometry workflows on sets of astronomical images"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "astropy",
    "astroquery",
    "numpy",
    "scipy",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
pw-screen = "photometry_workflow.screening.cli:main"
pw-stack = "photometry_workflow.stack.cli:main"
pw-sources = "photometry_workflow.sources.cli:main"
pw-aperture = "photometry_workflow.aperture_photometry.cli:main"
pw-compstars = "photometry_workflow.comparison_stars.cli:main"
pw-diffphot = "photometry_workflow.differential_photometry.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
